--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Criando um index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WORKSHOP GIT E GITHUB 2</title>
+</head>
+<body>
+    <h1>Git Hub</h1>
+    <p>Luysa Guimarães</p>
+    <p>Advogada e Estudante de DEV</p>
+</body>
+</html>
